--- a/dss_dockwidget_base.ui
+++ b/dss_dockwidget_base.ui
@@ -14,63 +14,63 @@
    <string>DSS</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <layout class="QFormLayout" name="formLayout">
-        <item row="0" column="0">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Water Bodies Layer</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QgsMapLayerComboBox" name="cmbWaterBodies"/>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="lblWaterAbstraction">
-          <property name="text">
-           <string>Water Abstraction</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QgsMapLayerComboBox" name="cmbWaterAbstraction"/>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="lblWaterDischarge">
-          <property name="text">
-           <string>Water Discharge</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="QgsMapLayerComboBox" name="cmbWaterDischarge"/>
-        </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="lblGroundwater">
-          <property name="text">
-           <string>Groundwater Bodies Layer</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="1">
-         <widget class="QgsMapLayerComboBox" name="cmbGroundwater"/>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="lblCatchments">
-          <property name="text">
-           <string>ERICA catchments</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QgsMapLayerComboBox" name="cmbCatchments"/>
-        </item>
-       </layout>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Water Bodies Layer</string>
+        </property>
+       </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QgsMapLayerComboBox" name="cmbWaterBodies"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="lblWaterAbstraction">
+        <property name="text">
+         <string>Water Abstraction</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QgsMapLayerComboBox" name="cmbWaterAbstraction"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="lblWaterDischarge">
+        <property name="text">
+         <string>Water Discharge</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QgsMapLayerComboBox" name="cmbWaterDischarge"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="lblGroundwater">
+        <property name="text">
+         <string>Groundwater Bodies Layer</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QgsMapLayerComboBox" name="cmbGroundwater"/>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="lblCatchments">
+        <property name="text">
+         <string>ERICA catchments</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QgsMapLayerComboBox" name="cmbCatchments"/>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0">
       <item>
        <layout class="QFormLayout" name="formLayout_2">
         <item row="0" column="0">
@@ -86,7 +86,7 @@
            <double>100000000.000000000000000</double>
           </property>
           <property name="value">
-           <double>604752.000000000000000</double>
+           <double>620902.000000000000000</double>
           </property>
          </widget>
         </item>
@@ -103,48 +103,55 @@
            <double>1000000000.000000000000000</double>
           </property>
           <property name="value">
-           <double>4319743.000000000000000</double>
+           <double>4340837.000000000000000</double>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer">
+       <widget class="QPushButton" name="btnPickPoint">
+        <property name="text">
+         <string>Pick a point +</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>68</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="btnCalculate">
+        <property name="text">
+         <string>Calculate</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Vertical</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>20</width>
-          <height>40</height>
+          <width>40</width>
+          <height>20</height>
          </size>
         </property>
        </spacer>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QPushButton" name="btnCalculate">
-          <property name="text">
-           <string>Calculate</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
      </layout>
     </item>
