--- a/dss_dockwidget_base.ui
+++ b/dss_dockwidget_base.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>DSS</string>
+   <string>Degree of Load on Water Resources</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
